--- a/web/src/components/blog-post.module.css
+++ b/web/src/components/blog-post.module.css
@@ -1,27 +1,32 @@
 @import '../styles/custom-media.css';
 @import '../styles/custom-properties.css';
 
-.root {}
+/* .root {} */
 
-.title {
+/* .title {
   composes: responsiveTitle1 from './typography.module.css';
-}
+} */
 
 .mainImage {
   display: block;
   position: relative;
-  background: var(--color-very-light-gray);
-  padding-bottom: calc(9 / 16 * 100%);
+  box-sizing: border-box;
+    max-width: 960px;
+    padding: 1.5em;
+    margin: 0 auto;
+  /* background: var(--color-very-light-gray); */
+  /* padding-bottom: calc(9 / 16 * 100%); */
 
   @nest & img {
     display: block;
-    position: absolute;
+    /* position: absolute;
     top: 0;
-    left: 0;
+    left: 0; */
+    margin: auto;
     width: 100%;
     height: 100%;
-    vertical-align: top;
-    object-fit: cover;
+    /* vertical-align: top;
+    object-fit: cover; */
   }
 }
 
@@ -59,11 +64,11 @@
   }
 }
 
-.metaContent {
-}
+/* .metaContent {
+} */
 
 .publishedAt {
-  composes: small from './typography.module.css';
+  /* // composes: small from './typography.module.css'; */
   margin: 2rem 0 3rem;
   color: var(--color-gray);
 }
@@ -84,6 +89,6 @@
 }
 
 .categoriesHeadline {
-  composes: base from './typography.module.css';
+  /* // composes: base from './typography.module.css'; */
   margin: 0.5rem 0 0;
 }
