--- a/web/src/components/blog-post-preview-grid.module.css
+++ b/web/src/components/blog-post-preview-grid.module.css
@@ -32,7 +32,7 @@
 }
 
 .browseMoreNav {
-  composes: small from './typography.module.css';
+  /* composes: small from './typography.module.css'; */
   margin-top: 1rem;
   text-align: right;
 
