--- a/web/src/styles/custom-properties.css
+++ b/web/src/styles/custom-properties.css
@@ -7,7 +7,7 @@
   --color-light-gray: #b4bcc7;
   --color-very-light-gray: #e7ebed;
   --color-white: #fff;
-  --color-accent: #d815ff;
+  --color-accent: #1540ff;
 
   /* Typography */
   --unit: 16;
