--- a/web/src/components/blog-post-preview-list.module.css
+++ b/web/src/components/blog-post-preview-list.module.css
@@ -14,18 +14,31 @@
   margin: 2rem 0;
 }
 
+.blogList{
+  border: 1px solid black;
+}
+
 .grid {
   margin: 0;
   padding: 0;
   list-style: none;
   display: grid;
-  grid-template-columns: 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
   grid-column-gap: 2em;
   grid-row-gap: 2em;
+
+  @media (max-width:1000px) {
+    grid-template-columns: 1fr 1fr;
+  }
+
+  @media (max-width:500px) {
+    grid-template-columns: 1fr;
+  }
+  
 }
 
 .browseMoreNav {
-  composes: small from './typography.module.css';
+  /* composes: small from './typography.module.css'; */
   margin-top: 2rem;
   text-align: center;
 
