--- a/web/src/components/header.module.css
+++ b/web/src/components/header.module.css
@@ -3,13 +3,13 @@
 
 .root {
   position: relative;
-  z-index: 100;
+  z-index: 100; 
 }
 
 .wrapper {
   box-sizing: border-box;
   margin: 0 auto;
-  max-width: 960px;
+  max-width: 1500px;
   padding: 1em;
   display: flex;
 
@@ -26,6 +26,7 @@
     display: inline-block;
     padding: 0.5em;
     color: inherit;
+    /* color: white; */
     text-decoration: none;
 
     @media (hover: hover) {
@@ -44,7 +45,7 @@
   margin: 0;
   padding: calc(14 / 17 / 2 * 1rem);
   outline: none;
-  color: inherit;
+  /* color: white; */
 
   & svg {
     display: block;
@@ -58,6 +59,7 @@
 
 .nav {
   display: none;
+  /* color: white; */
 
   @nest & ul {
     margin: 0;
@@ -68,6 +70,7 @@
     display: block;
     color: inherit;
     text-decoration: none;
+    /* color: white; */
   }
 
   @media (hover: hover) {
