--- a/web/src/components/typography.module.css
+++ b/web/src/components/typography.module.css
@@ -103,11 +103,13 @@
   }
 }
 
+
 .responsiveTitle3 {
   font-weight: 600;
   font-size: var(--font-large-size);
   line-height: var(--font-large-line-height);
   margin: 1rem 0 0.5rem;
+  /* color: white; */
 
   @media (--media-min-small) {
     font-size: var(--font-large-size);
