--- a/web/src/components/blog-post-preview-list.module.css
+++ b/web/src/components/blog-post-preview-list.module.css
@@ -18,12 +18,17 @@
   border: 1px solid black;
 }
 
+/* .grid :first-child {
+  grid-column: 1 / -1;
+} */
+
 .grid {
   margin: 0;
   padding: 0;
   list-style: none;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  /* grid-template-columns: 1fr 1fr 1fr; */
+  grid-template-columns: repeat(3, 1fr);
   grid-column-gap: 2em;
   grid-row-gap: 2em;
 
